k8s/overlays/aws-k3s/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-php
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: php
---
# -------------------------
# 2. Nginx Frontend 패치
# -------------------------
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hrm-nginx
spec:
  replicas: 1
