k8s/overlays/aws-k3s/delete-local-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
$patch: delete
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
$patch: delete
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
$patch: delete
