k8s/overlays/aws-k3s/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hrm-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
